[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/RangedEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemy/Enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy/python.webp" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 32, -56, 56, -32, 64, -8, 64, 8, 56, 32, 32, 56, 8, 64, -8, 64, -32, 56, -56, 32, -64, 8, -64, -8, -56, -32, -32, -56, -8, -64, 8, -64 )

[node name="RangedEnemy" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 1044
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemySprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( -1.52588e-05, 3.8147e-06 )
scale = Vector2( 0.14447, 0.144307 )
texture = ExtResource( 2 )

[node name="python" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0, -7.15256e-06 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147484672

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
